Prevent multiple decimals and prevent length overflow

--- a/style.css
+++ b/style.css
@@ -40,6 +40,8 @@ body {
   display: flex;
   justify-content: flex-end;
   align-items: flex-end;
+  max-width: 540px;
+  overflow: hidden;
 }
 
 span {
